feat(examples): update maven projects