@@ -1,7 +1,7 @@
 package com.example;
 
 public class ExploreMe {
-    private int a;
+    private final int a;
 
     public ExploreMe(int a) {
         this.a = a;
@@ -16,8 +16,8 @@ public class ExploreMe {
                     if (c.startsWith("@")) {
                         String className = c.substring(1);
                         try {
-                            Class.forName(className).newInstance();
-                        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException ignored) {
+                            Class.forName(className).getDeclaredConstructor().newInstance();
+                        } catch (ReflectiveOperationException ignored) {
                         }
                     }
                 }
